# sentipy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  set.txt  setup.py
.github/workflows/: tests.yml  type_checking.yml
sentipy/: __init__.py  _typing_imports.py  py.typed  sentipy.py  ws.py
tests/: .gitignore  sentipy_tests.py
