[tool.poetry]
name = "sentiment-investor"
version = "2.0.0"
description = "Access the Sentiment Investor API through Python"
authors = ["Robert Stok <rs.stok@gmail.com>"]
readme = "README.md"
license = "MIT"

homepage = "https://sentimentinvestor.com/"
repository = "https://github.com/sentimentinvestor/sentipy"
documentation = "https://docs.sentimentinvestor.com/python/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sentimentinvestor/sentipy/issues"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
websocket-client = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
